@@ -1,0 +1,80 @@
+##
+path.hybridbackforward.enable = 1
+path.hybridbackforward.partition = 0.0
+path.hybridbackforward.glossinessthreshold = 0.05
+##batch.haltspp = 0
+#batch.haltthreshold = 0.0001
+#batch.haltthreshold.stoprendering.enable = 0
+#batch.halttime = 0
+#
+path.clamping.variance.maxvalue = 10
+#
+film.filter.type = "BLACKMANHARRIS"
+film.filter.width = 1.5
+film.height = 600
+film.imagepipelines.0.0.type = "NOP"
+film.imagepipelines.0.1.scale = 0.5
+film.imagepipelines.0.1.type = "TONEMAP_LINEAR"
+film.imagepipelines.0.2.type = "GAMMA_CORRECTION"
+film.imagepipelines.0.2.value = 2.2000000000000002
+film.imagepipelines.0.radiancescales.0.enabled = 1
+film.imagepipelines.0.radiancescales.0.globalscale = 1
+film.imagepipelines.0.radiancescales.0.rgbscale = 1 1 1
+film.imagepipelines.1.0.type = "INTEL_OIDN"
+film.imagepipelines.1.1.type = "NOP"
+film.imagepipelines.1.2.scale = 0.5
+film.imagepipelines.1.2.type = "TONEMAP_LINEAR"
+film.imagepipelines.1.3.type = "GAMMA_CORRECTION"
+film.imagepipelines.1.3.value = 2.2000000000000002
+film.imagepipelines.1.radiancescales.0.enabled = 1
+film.imagepipelines.1.radiancescales.0.globalscale = 1
+film.imagepipelines.1.radiancescales.0.rgbscale = 1 1 1
+film.opencl.enable = 1
+film.outputs.0.filename = "RGB_IMAGEPIPELINE_0.png"
+film.outputs.0.index = 0
+film.outputs.0.type = "RGB_IMAGEPIPELINE"
+film.outputs.1.filename = "ALBEDO.exr"
+film.outputs.1.type = "ALBEDO"
+film.outputs.2.filename = "AVG_SHADING_NORMAL.exr"
+film.outputs.2.type = "AVG_SHADING_NORMAL"
+film.outputs.3.filename = "RGB_IMAGEPIPELINE_1.png"
+film.outputs.3.index = 1
+film.outputs.3.type = "RGB_IMAGEPIPELINE"
+film.width = 1000
+lightstrategy.type = "LOG_POWER"
+opencl.cpu.use = 0
+opencl.devices.select = "110"
+opencl.gpu.use = 1
+opencl.native.threads.count = 0
+path.forceblackbackground.enable = 0
+path.pathdepth.diffuse = 5
+path.pathdepth.glossy = 5
+path.pathdepth.specular = 10
+path.pathdepth.total = 11
+path.photongi.caustic.enabled = 0
+path.photongi.caustic.lookup.maxcount = 64
+path.photongi.caustic.lookup.normalangle = 9.9999997090929202
+path.photongi.caustic.lookup.radius = 0.025
+#path.photongi.caustic.merge.radiusscale = 0.0
+path.photongi.caustic.maxsize = 100000
+path.photongi.caustic.updatespp = 4
+path.photongi.indirect.enabled = 0
+path.photongi.indirect.glossinessusagethreshold = 0.20000000298023224
+path.photongi.indirect.lookup.normalangle = 9.9999997090929202
+path.photongi.indirect.lookup.radius = 0.15000000596046448
+path.photongi.indirect.maxsize = 100000
+path.photongi.indirect.usagethresholdscale = 4
+path.photongi.photon.maxcount = 10000000
+path.photongi.photon.maxdepth = 20
+#path.photongi.debug.type = showcaustic
+renderengine.seed = 1
+renderengine.type = "PATHOCL"
+sampler.metropolis.imagemutationrate = 0.10000000000000001
+sampler.metropolis.largesteprate = 0.40000000000000002
+sampler.metropolis.maxconsecutivereject = 512
+sampler.random.adaptive.strength = 0.69999998807907104
+sampler.sobol.adaptive.strength = 0.69999998807907104
+sampler.type = "SOBOL"
+scene.epsilon.max = 0.10000000149011612
+scene.epsilon.min = 9.9999997473787516e-06
+scene.file = "glossycaustic.scn"
