@@ -1,0 +1,87 @@
+scene.camera.cliphither = 0.00100000005
+scene.camera.clipyon = 1.00000002e+30
+scene.camera.shutteropen = 0
+scene.camera.shutterclose = 1
+scene.camera.autovolume.enable = 1
+scene.camera.lookat.orig = 11.1315203 2.28004956 5.83006191
+scene.camera.lookat.target = 10.3104382 2.11173487 5.28461552
+scene.camera.up = 0 0 1
+scene.camera.lensradius = 0
+scene.camera.focaldistance = 10
+scene.camera.autofocus.enable = 0
+scene.camera.type = "perspective"
+scene.camera.oculusrift.barrelpostpro.enable = 0
+scene.camera.fieldofview = 49.1343422
+scene.textures.Implicit-ConstFloatTexture-45615f27-7f9f-47de-91f9-ca861e317532.type = "constfloat1"
+scene.textures.Implicit-ConstFloatTexture-45615f27-7f9f-47de-91f9-ca861e317532.value = 1.5
+scene.textures.Implicit-ConstFloatTexture3-33d5e275-0bed-4d0e-a552-a4ae4adb4538.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-33d5e275-0bed-4d0e-a552-a4ae4adb4538.value = 0 0 0
+scene.textures.Implicit-ConstFloatTexture3-b244b63a-e843-4c95-b42a-6807b58c8732.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-b244b63a-e843-4c95-b42a-6807b58c8732.value = 0.050918255 0.948723257 1.78031266
+scene.textures.Implicit-ConstFloatTexture3-b07762dc-51a9-45b9-a95d-bc92c25044e9.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-b07762dc-51a9-45b9-a95d-bc92c25044e9.value = 1 1 1
+scene.textures.Implicit-ConstFloatTexture3-54d0f0bf-c34e-455f-8b49-065951f2947d.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-54d0f0bf-c34e-455f-8b49-065951f2947d.value = 0 0 0
+scene.textures.Implicit-ConstFloatTexture3-cc8ea2c2-268b-4bec-83bd-f30ece4ac714.type = "constfloat3"
+#scene.textures.Implicit-ConstFloatTexture3-cc8ea2c2-268b-4bec-83bd-f30ece4ac714.value = 0.699999988 0.699999988 0.699999988
+scene.textures.Implicit-ConstFloatTexture3-cc8ea2c2-268b-4bec-83bd-f30ece4ac714.value = 0.5 0.5 0.5
+scene.textures.Implicit-ConstFloatTexture3-cf0123e6-32ea-4657-9eea-d97d69787814.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-cf0123e6-32ea-4657-9eea-d97d69787814.value = 1 1 1
+scene.textures.Implicit-ConstFloatTexture3-533199b1-8f15-46ed-a74d-55ed6e2c7b6c.type = "constfloat3"
+scene.textures.Implicit-ConstFloatTexture3-533199b1-8f15-46ed-a74d-55ed6e2c7b6c.value = 1 1 1
+scene.volumes.140403213410248.type = "clear"
+scene.volumes.140403213410248.absorption = "Implicit-ConstFloatTexture3-b244b63a-e843-4c95-b42a-6807b58c8732"
+scene.volumes.140403213410248.priority = 0
+scene.volumes.140403213410248.ior = "Implicit-ConstFloatTexture-45615f27-7f9f-47de-91f9-ca861e317532"
+scene.volumes.140403213410248.id = 3364224
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.type = "matte"
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.kd = "Implicit-ConstFloatTexture3-54d0f0bf-c34e-455f-8b49-065951f2947d"
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.id = 6728256
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.gain = 1 1 1
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.power = 100
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.efficency = 17
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.theta = 90
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.id = 0
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission = "Implicit-ConstFloatTexture3-b07762dc-51a9-45b9-a95d-bc92c25044e9"
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.diffuse.enable = 1
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.glossy.enable = 1
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.specular.enable = 1
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.shadowcatcher.enable = 0
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.shadowcatcher.onlyinfinitelights = 0
+scene.materials.Surface_Material__001_140403213510152.type = "matte"
+scene.materials.Surface_Material__001_140403213510152.kd = "Implicit-ConstFloatTexture3-cc8ea2c2-268b-4bec-83bd-f30ece4ac714"
+scene.materials.Surface_Material__001_140403213510152.id = 10034367
+scene.materials.Surface_Material__001_140403213510152.emission.gain = 1 1 1
+scene.materials.Surface_Material__001_140403213510152.emission.power = 0
+scene.materials.Surface_Material__001_140403213510152.emission.efficency = 0
+scene.materials.Surface_Material__001_140403213510152.emission.theta = 90
+scene.materials.Surface_Material__001_140403213510152.emission.id = 0
+scene.materials.Surface_Material__001_140403213510152.visibility.indirect.diffuse.enable = 1
+scene.materials.Surface_Material__001_140403213510152.visibility.indirect.glossy.enable = 1
+scene.materials.Surface_Material__001_140403213510152.visibility.indirect.specular.enable = 1
+scene.materials.Surface_Material__001_140403213510152.shadowcatcher.enable = 0
+scene.materials.Surface_Material__001_140403213510152.shadowcatcher.onlyinfinitelights = 0
+##
+scene.materials.Surface_Material_140403213508616.type = glossy2
+scene.materials.Surface_Material_140403213508616.kd = 0.75 0.1 0.0
+scene.materials.Surface_Material_140403213508616.ks = 0.5 0.1 0.0
+scene.materials.Surface_Material_140403213508616.uroughness = 0.01
+scene.materials.Surface_Material_140403213508616.vroughness = 0.01
+##
+#scene.lights.il.type = constantinfinite
+#scene.lights.il.color = 1.0 1.0 1.0
+#scene.lights.il.gain = 0.25 0.25 0.25
+##
+scene.objects.Lamp_Area_140402982430728.material = "Lamp_Area_140402982430728_AREA_LIGHT_MAT"
+scene.objects.Lamp_Area_140402982430728.ply = "mesh-00000.ply"
+scene.objects.Lamp_Area_140402982430728.camerainvisible = 0
+scene.objects.Lamp_Area_140402982430728.appliedtransformation = 0.0256471187 0.0170722511 -0.0393797494 0 -0.0277059916 0.0416218601 0 0 0.655623078 0.436421782 0.616193533 0 7.05835962 4.65195036 3.44439077 1
+##
+scene.objects.Mesh_Plane_140403213016072000.material = "Surface_Material__001_140403213510152"
+scene.objects.Mesh_Plane_140403213016072000.ply = "mesh-00001.ply"
+scene.objects.Mesh_Plane_140403213016072000.camerainvisible = 0
+scene.objects.Mesh_Plane_140403213016072000.appliedtransformation = 11.5428696 0 0 0 0 11.5428696 0 0 0 0 11.5428696 0 0 0 -1.01872075 1
+scene.objects.Mesh_dice_highpoly_140402982433800000.material = "Surface_Material_140403213508616"
+scene.objects.Mesh_dice_highpoly_140402982433800000.ply = "mesh-00002.ply"
+scene.objects.Mesh_dice_highpoly_140402982433800000.camerainvisible = 0
+scene.objects.Mesh_dice_highpoly_140402982433800000.appliedtransformation = 1.94707184e-07 0 -1 0 0.984943807 -0.172874719 1.91775641e-07 0 -0.172874719 -0.984943807 -3.36599513e-08 0 0 0 0 1
